--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jquery": "^3.4.1",
     "mongoose": "^5.6.11"
   },
   "devDependencies": {
-    "@types/express": "^4.17.1"
+    "@types/express": "^4.17.1",
+    "@types/jquery": "^3.3.31"
   }
 }
